--- a/Safetyy.css
+++ b/Safetyy.css
@@ -1,6 +1,6 @@
 
 .logo{
-    color: #ff7200;
+    //color: #ff7200;
     font-size: 35px;
     font-family: Arial;
     padding-left: 20px;
@@ -45,25 +45,6 @@ header{
  
 
 
-
-
-/* #algonquin {
-    font-family: 'Times New Roman';
-    font-size: 35px;
-    padding-left: 30px;
-    margin-top: 4%;
-    letter-spacing: 1,5px;
-} */
-
-/* #address {
-    font-family: 'Times New Roman';
-    font-size: 25px;
-    padding-left: 10px;
-    margin-top: 1%;
-    letter-spacing: 1,5px;
-
-} */
-
 section{
     margin: auto;
 }
@@ -77,11 +58,6 @@ body{
     background-color:  rgb(187, 187, 240);
 }
 
-/* footer{
-    text-align: center;
-    margin-top: 30%;
-    background-color: rgb(187, 187, 240);
-} */
 
 h2{
     text-align: left;
