--- a/Safetyy.css
+++ b/Safetyy.css
@@ -55,15 +55,25 @@ h1{
 
 body{
     height: 100vh;
+    font-family:Arial, sans-serif;
+    font-size:16px;
+    line-height: 1.6;
+    colour:#333; /*text color */
+    background-color:  #f7f7f7;
     //background-color:  rgb(187, 187, 240);
 }
 
 
 h2{
     text-align: left;
+    font-size: 2.5rem;
+    font-weight:bold;
+    margin:15px 0;
 }
 
 p{
     font-family: 'Times New Roman';
     text-overflow: clip;
+    margin: 10px 0;
 }
+
