--- a/Safetyy.css
+++ b/Safetyy.css
@@ -60,7 +60,7 @@ body{
     line-height: 1.6;
     colour:#333; /*text color */
     background-color:  #f7f7f7;
-    //background-color:  rgb(187, 187, 240);
+    background-color:  rgb(187, 187, 240);
 }
 
 
